' Generated by UML Generator
' Encoded: dP8nJyCm48Lt_ueR6q8avWYX8h4W8HWo8WR7EO9BubI-IoMe-j-ntRXn2yh0uk7ytjszpruJIyjZtmdwr6OhhUn1TPBedjdgUcHyL8Efz3V2ZVZG3OBILdKeH511DTORL0nx0L3GM9DoBhHKmfCclgrEbJilADoHJvRLeZhpIZEmVl-QgxHokp0QBg5osvasAs4twCPhBRQk1TfPdGmeOIuddj7ynzKYfojbVqRDwLor77PgVaYeJdT7i4Rs63DFe3t2Ck9FsSOSgUSQBXs1xxXj9EC2L1VrsRNn6K_3VR9GJ0VymXDUE4iNd8Z4fp_VvXB0IqreTsWVi1y2WdplFYfhTO1UQhEIjgKu-_KjiSV_E1H5Gb4aGA-EDs6hDPh6_VqV
' URL: http://www.plantuml.com/plantuml/uml/dP8nJyCm48Lt_ueR6q8avWYX8h4W8HWo8WR7EO9BubI-IoMe-j-ntRXn2yh0uk7ytjszpruJIyjZtmdwr6OhhUn1TPBedjdgUcHyL8Efz3V2ZVZG3OBILdKeH511DTORL0nx0L3GM9DoBhHKmfCclgrEbJilADoHJvRLeZhpIZEmVl-QgxHokp0QBg5osvasAs4twCPhBRQk1TfPdGmeOIuddj7ynzKYfojbVqRDwLor77PgVaYeJdT7i4Rs63DFe3t2Ck9FsSOSgUSQBXs1xxXj9EC2L1VrsRNn6K_3VR9GJ0VymXDUE4iNd8Z4fp_VvXB0IqreTsWVi1y2WdplFYfhTO1UQhEIjgKu-_KjiSV_E1H5Gb4aGA-EDs6hDPh6_VqV
' Generated on: 2026-07-14T23:25:06.291539829

@startuml
skinparam classAttributeIconSize 0
hide circle

class Subject {
  -subscribers: List<Subscriber>
  --
  +Subject(subscribers: List<Subscriber>)
  +notifySubscribers(content: String): void
  +registerSubscriber(subscriber: Subscriber): void
  +unregisterSubscriber(subscriber: Subscriber): void
  +getSubscribers(): List<Subscriber>
  +setSubscribers(subscribers: List<Subscriber>): void
}

class Subscriber {
  -name: String
  -subject: Subject
  --
  +Subscriber(name: String, subject: Subject)
  +update(content: String): void
  +getName(): String
  +setName(name: String): void
  +getSubject(): Subject
  +setSubject(subject: Subject): void
}

class ObserverDemo {
  +{static} main(args: String[]): void
}

Subject o-- Subscriber
Subscriber *-- Subject
@enduml